# open-mission-ops-lab

./: .gitignore  LICENSE  README.md  orbit_3d_template.html  pyproject.toml  requirements.txt
app/: Home.py  Orbit3D.py  app.py
examples/: scenario_taipei_iss.json  scenario_taipei_sso_earth_obs.json  scenario_taipei_uhf_amsat.json
src/: doppler.py  link_budget.py  models.py  pass_calculator.py
