[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-mission-ops-lab"
version = "0.1.0"
description = "CubeSat access, link budget, Doppler, and footprint demo with Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.33",
  "plotly>=5.20",
  "skyfield>=1.49",
  "numpy>=1.26",
  "pandas>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]